k8s-apps/media/sonarr/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/managed-by: argocd
